<resources>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="New">"New"</string>
    <string name="app_name">"Efficient Chord"</string>
    <string name="A">"A"</string>
    <string name="As">"A#"</string>
    <string name="B">"B"</string>
    <string name="C">"C"</string>
    <string name="D">"D"</string>
    <string name="E">"E"</string>
    <string name="a">"A"</string>
    <string name="F">"F"</string>
    <string name="G">"G"</string>
    <string name="sharpQ">"Sharp?"</string>
    <string name="Acci">"Accidentals"</string>
    <string name="MAJ">"Major"</string>
    <string name="MIN">"Minor"</string>
    <string name="DIM">"Diminished"</string>
    <string name="AUG">"Augmented"</string>
    <string name="INT">"Interval"</string>
    <string name="next">"Next Chord"</string>
    <string name="view">"View Chords"</string>
    <string name="add">"Add"</string>
    <string name="addd">"Add"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="load">"Load"</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="large_text">"Currently this function of the app does not work."</string>
    <string name="title_activity_chord_demo">ChordDemo</string>
    <string name="accidental1">""</string>
    <string name="accidental2">""</string>
    <string name="sharp">"#"</string>
    <string name="flat">"b"</string>
    <string name="natural">"♮"</string>
    <string name="accidental3">""</string>
    <string name="accidental4">"</string>
    <string name="maxAccident">""</string>
    <string name="back">"Back"</string>
    <string name="nextP">"Next"</string>
    <string name="pageNo">"Page 1 out of 1"</string>
    <string name="six">"6"</string>
    <string name="nine">"9"</string>
    <string name="thirteen">"13"</string>
    <string name="five">"5"</string>
    <string name="major7">"Major 7"</string>
    <string name="dominant7">"7"</string>
    <string name="chords">"Chords"</string>
    <string name="none">"None"</string>
    <string name="chord1">""</string>
    <string name="chord2">""</string>
    <string name="chord3">""</string>
    <string name="chord4">""</string>
    <string name="chord5">""</string>
    <string name="chord6">""</string>
    <string name="chord7">""</string>
    <string name="chord8">""</string>
    <string name="chord9">""</string>
    <string name="chord10">""</string>
</resources>
